[gd_scene load_steps=18 format=3 uid="uid://cygpivf14h57n"]

[ext_resource type="Script" path="res://scenes/LogicGates/GateOutlet.gd" id="1_xw4lu"]

[sub_resource type="GDScript" id="GDScript_up137"]
script/source = "extends Interactable

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass


func _on_interacted(_interactor):
	var nand_gate = get_parent()
	var board = nand_gate.get_parent()
	var wires_to_remove = []
	for wire in board.wires:
		if wire is Wire:
			if wire.input == nand_gate.find_child(\"InputA\") or wire.input == nand_gate.find_child(\"InputB\") or wire.output == nand_gate.find_child(\"Output\"):
				wires_to_remove.append(wire)
	for wire in wires_to_remove:
		wire.input.wires = []
		wire.input.update_signal_value()
		wire.output.wires = []
		wire.output.update_signal_value()
		board.wires.erase(wire)
		wire.queue_free()
	nand_gate.queue_free()
"

[sub_resource type="BoxShape3D" id="BoxShape3D_gx3y8"]
size = Vector3(0.399281, 0.298981, 0.100639)

[sub_resource type="BoxMesh" id="BoxMesh_egwh4"]
size = Vector3(0.2, 0.3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_110ae"]
albedo_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_js3d0"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34b8k"]
albedo_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_wf86b"]
top_radius = 0.04
bottom_radius = 0.04
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ppunn"]
albedo_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nkxw7"]
size = Vector3(0.116174, 0.0759339, 0.0814881)

[sub_resource type="BoxMesh" id="BoxMesh_e26k8"]
size = Vector3(0.1, 0.05, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0rupa"]
albedo_color = Color(0.196078, 0.196078, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bflbp"]
size = Vector3(0.116647, 0.0820709, 0.0788498)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6sd0o"]
albedo_color = Color(0.196078, 0.196078, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_xcqxp"]
size = Vector3(0.126586, 0.0742933, 0.0883558)

[sub_resource type="BoxMesh" id="BoxMesh_cxwcx"]
size = Vector3(0.1, 0.05, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wydm8"]
albedo_color = Color(0.196078, 0.196078, 1, 1)

[node name="Node3D" type="Node3D"]

[node name="Body" type="StaticBody3D" parent="."]
collision_layer = 3
script = SubResource("GDScript_up137")
display_text = "Remove"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.86102e-05, 0.000747681, 0.000682831)
shape = SubResource("BoxShape3D_gx3y8")

[node name="Body" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0)
mesh = SubResource("BoxMesh_egwh4")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_110ae")

[node name="Body2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_js3d0")
surface_material_override/0 = SubResource("StandardMaterial3D_34b8k")

[node name="Body3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.17197, 0, 0)
mesh = SubResource("CylinderMesh_wf86b")
surface_material_override/0 = SubResource("StandardMaterial3D_ppunn")

[node name="InputA" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.1, 0)
collision_layer = 3
script = ExtResource("1_xw4lu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InputA"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0079411, -3.09199e-06, -0.000894257)
shape = SubResource("BoxShape3D_nkxw7")

[node name="InteractMesh" type="MeshInstance3D" parent="InputA"]
mesh = SubResource("BoxMesh_e26k8")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_0rupa")

[node name="InputB" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, -0.1, 0)
collision_layer = 3
script = ExtResource("1_xw4lu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InputB"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00823861, 0.00242157, 0.00207901)
shape = SubResource("BoxShape3D_bflbp")

[node name="InteractMesh" type="MeshInstance3D" parent="InputB"]
mesh = SubResource("BoxMesh_e26k8")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_6sd0o")

[node name="Output" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0)
collision_layer = 3
script = ExtResource("1_xw4lu")
display_text = "Attach Wire"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Output"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00140589, -0.00106769, 0.00115646)
shape = SubResource("BoxShape3D_xcqxp")

[node name="InteractMesh" type="MeshInstance3D" parent="Output"]
mesh = SubResource("BoxMesh_cxwcx")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_wydm8")

[connection signal="interacted" from="Body" to="Body" method="_on_interacted"]
[connection signal="interacted" from="InputA" to="InputA" method="_on_interacted"]
[connection signal="interacted" from="InputB" to="InputB" method="_on_interacted"]
[connection signal="interacted" from="Output" to="Output" method="_on_interacted"]
